# Internet-de-las-Cosas

./: README.md
async-web-server/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
async-web-server/main/: CMakeLists.txt  async-web-server.c  idf_component.yml
async-web-server/main/dht11/: dht11.c  dht11.h
async-web-server/main/web_server/: web_server.c  web_server.h
async-web-server/main/wifi_setup/: wifi_setup.c  wifi_setup.h
async-web-server/spiffs_image/: main.html
practica-2/: .gitignore  consigna.md
practica-2/ambient-monitor/: CMakeLists.txt  sdkconfig
practica-2/informe/: informe.aux  informe.fdb_latexmk  informe.fls  informe.tex
practica-2/mosquitto-broker/: docker-compose.yml
practica-2/sensor-firmware/: .gitignore  CMakeLists.txt
proyecto-final/: .gitignore  CONTEXTO_PROYECTO.md  GUIA_DEFENSA_Y_PRESENTACION.md  README.md  findings.md  progress.md  task_plan.md
proyecto-final/backend-services/: README.md  docker-compose.yml  mock_gateway.py  setup_mdns_avahi.sh
proyecto-final/edge-module/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
proyecto-final/gateway-module/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
proyecto-final/gateway-module/main/: CMakeLists.txt  esp_hal.hpp  gateway-module.cpp  gateway_config.h  idf_component.yml  lora_service.cpp  lora_service.h  mqtt_service.cpp  mqtt_service.h  wifi_service.cpp  wifi_service.h
proyecto-final/informe/: Makefile  config.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  presentacion.aux  presentacion.nav  presentacion.out  (+3 more)
(+56 files in other folders)
